# disqualified

./: Cargo.toml  README.md  RELEASES.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  performance_regression.md
.github/workflows/: ci.yml  post-release.yml  release.yml  validation-jobs.yml
benches/: README.md
errors/: Cargo.toml
errors/src/: lib.rs
examples/demonstrations/: short_name.rs
src/: lib.rs  short_name.rs
tools/compile_fail_utils/: Cargo.toml
